--- a/css/style.css
+++ b/css/style.css
@@ -1,102 +1,183 @@
 @import url('https://fonts.googleapis.com/css2?family=Reem+Kufi+Fun:wght@400..700&display=swap');
 
 * {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
-    text-transform: capitalize;
     text-decoration: none;
     font-family: "Reem Kufi Fun", sans-serif;
 }
-
-
-body {
+body{
     background-color: #5f0609;
     color: #FFFF;
+}
+/* media query
+@media screen and (min-width:1024px) {
+    .central{
+        max-width: 1025px;
+    }
+} */
+
+.contenedorh{
+    width: 1200px;
+    height: auto;
+    background-color: #836868;
+}
+.contenedor-comienzo{
+    width: 1200px;
+    height: auto;
+    background-color: #836868;
+}
+#imagen1{
+    width: 350px;
+    height: 400px;
+    background-image: url(../imges/invierno.jpg);
+    float: left;
+    margin-bottom: 10px;
+    margin-top: 30px;
+    margin-top: 30px;
+    margin-right: 10px;
+    background-size:cover;
+}
+.presentacion{
+    width: 400px;
+    height: 400px;
+    margin: 15px 15px;
+    float: left;
+    box-sizing: border-box;
+    margin-top: 30px;
+}
+.content{
+    width: 1200px;
+    height: auto;
+    margin: 0 auto;
+    padding: 0 1em;
+    border-top: 1px solid #fff;
+    flex: auto;
+    float: none;
+    display:flex;
+    border-bottom: 1px solid #fff;
+}
+.content-coment{
+    width: 1200px;
+    height: auto;
+    display:inline;
+}
+.comentarios{
+    width: 1100px;
+    height: 100px;
+}
+
+h1{
+    font-size: 30px;
+}
+.central{
+    width: 1200px;
+    border-bottom: 1px solid #fff;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 40px;
+    background-color: #ad2003;
+    padding: 30px;
+}
+.otros-libros{
+    display: inline-flex;
+
+}
+.contenido-libro{
+    font-size: 20px;
+
+}
+.contendordecoment{
+    width: 900px;
+    height: 400px;
+}
+.comentarios{
+    font-size: 15px;
+}
+
+.nombre-libro{
+    margin: 0 0 1em;
+    padding: 1em 0;
+    text-align: center;
+    font-weight: 200px;
+}
+
+.libro1 a{
+    text-decoration: none;
+
+}
+.libro1 a:hover{
+    box-shadow: 3px 3px 8px #836868;
+}
+.contenido-libro{
+    padding: 1,3em;
+}
+.contenido-libro h2{
+    margin-top: 0;
+    margin-bottom: .5em;
+    font-weight: normal;
+}
+
+figure{
     margin: 0;
 }
-h1{ font-size: 3em;}
-h2{font-size: 2.7 em;}
-h3{font-size: 1.25 em}
-ul{list-style: none;}
-li{font-size: 1.25em;}
+img{
+    display: block;
+    border: 0;
+    width: 70%;
+    height: auto;
+}
 
+.libros{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+}
+.libro1{
+    margin-bottom: 2em;
+    width: 33%;
+}
 button{
-    font-size: 1.5em;
+    font-size: 1em;
     font-weight: bold;
     padding: 5px 15px;
     border-radius: 5px;
     border: 2px solid rgb(0,0,0,0.3);
     box-shadow: 2px 2px 10px rgb(0,0,0,0.5);
-    color:white;
-    background-color: rgb(204, 96, 96);
+    color:#000;
+    background-color: #bdd3b6;
 }
 
 button:hover{
-    background-color: rgb(202, 161, 240);
+    background-color: #ad2003;
+}
+.navbar {
+    position: sticky;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #5F0609;
 }
 
-.content{
-    max-width: 1400px;
-    margin: auto;
-}
-header{
-    background-color: rgb(243, 65, 65);
-
-}
-header .content{
-    display: contents;
-    flex-direction: column;
-    align-items: center;
-}
-header nav{
+.navbar ul{
     display: flex;
-    flex-direction:row;
-    text-align: center;
-    padding-bottom: 50px;
-    font-weight: bold;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    list-style-type: none;
+    padding: 1.2em;
+    gap: .5em;
 }
 
-header a{
-    padding: 5px 12px;
+.navbar li a{
+    flex: 1 0 auto;
+    text-align: center;
+    border-right: solid 1px white;
+    border-left: solid 1px white;
     text-decoration: none;
-    font-weight: bold;
-    color: #FFFF;
-    font-size: 20px;
+    padding: .5em;
+    color: white;
 }
-header a:hover{
-    background-color: brown;
-}
-.contenedorautor{
-    width: 1200px;
-    height: auto;
-}
-.content-2{
-    text-align: center;
-    padding: 15px 12px;
-    box-sizing: border-box;
-
-}
-.imga1{
-    margin-top: 15px;
-    padding: 10px;
-    width: 400px;
-    height: 500px;   
-}
-.cabecera{
-    text-align: center;
-    margin-top: 0;
-    padding: 15px 12px;
-
-}
-footer{
-    margin-top: 10px;
-    padding: 12px;
-    margin: 0 auto;
-    padding: auto;
-    background-color: rgb(224, 56, 56);
-    text-decoration: none;
-    list-style: none;
-    text-align: center;
-    color: black;
-} 
