--- a/css/style.css
+++ b/css/style.css
@@ -11,117 +11,129 @@ body{
     background-color: #e0e6ae;
     color: #000;
     width: 100%;
-
 }
-.contenedorh{
+@media screen and (max-width:800px){
+    .detail-contenedor-libros{
+        flex: 50%;
+    }
+}
+@media screen and (max-width:600px){
+    .detail-contenedor-libros{
+        flex: 100%;
+    }
+}
+.detail-contenedor-header{
     height: 60px;
     background-color: #bdd3b6;
     padding: 0;
-
 }
-/* .main{
-    display: flex; */
 
 .detail-contenedor-comienzo{
-    height: 500px;
-    /* display: flex; */
+    height: 600px;
+    display: flex;
+    position: relative;
     border-top: 1px solid #5F0609;
-    background-image: url(../imges/books-5433432_1280.jpg);
+    background-image:linear-gradient(rgba(5, 7, 12, .7),rgba(5, 7, 12, .7), rgba(7, 7, 12, .7)), url(../imges/books-5433432_1280.jpg);
     background-position: center center;
     background-repeat: none;
     background-size: cover;
     min-height: 7ovh;
     align-items:center;
     justify-content: center;
-
 }
-.detail-imagen-atributos{
+.detail-img-atribu-descripcion{
     display: flex;
 }
-#titulo1{
-    /* display:flex;
-    font-weight: 300;
+
+#detail-titulo1{
+    position: absolute;
+    left: 600px;
+    top: 60px;
+    font-size: 50px;
     color: #fff;
-    border-bottom: 1px solid #5F0609; */
     text-align: center;
     padding: .2em;
 }
-.imagen1{
-    width: 350px;
-    height: 400px;
+
+.imagen-principal{
+    width: 400px;
+    height: 500px;
+    border-radius: 15px;
     display:flex;
     cursor: pointer;
-    position: relative;
-    transition-duration: 1s;
+    filter:drop-shadow(0px 7px 21px #5f0609);
+    border: 1px solid #5F0609;
+    position: absolute;
+    left: 170px;
+    top: 30px;
+}
+
+.imagen-principal:hover{
+    scale: 1.1;
+    box-shadow: 0 0 15px #5F0609;
 
 }
-.imagen1:hover{
-    scale: 1.2;
-    box-shadow: 0 0 10px #5F0609;
-
-}
-.atributos{
-    width: 200px;
-    margin: 0;
-    font-size: 12px;
-    border: 2px solid #000;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-
-}
-.atributos-p{
-    width: 110px;
-    border: 2px solid #000;
-    margin: 10px;
-    display:block;
-    text-align: center;
-  
-}
-.presentacion{
-    width: 500px;
-    margin: 15px 15px;
-    display:flex;
-    color: #fff;
-    border: 2px solid #000;
-
-}
-.iconos{
+.detail-atributos{
     width: 250px;
-    height: 70px;
+    border: 1px solid #000;
+    font-size: 12px;
+    display:flex;
+    flex-direction:column-reverse;
+    color: #fff;
+    position: absolute;
+    right: 400px;
+    top:170px;
+    opacity: 60%;
+}
+.detail-descripcion p{
+    font-size: 18px;
+    text-align:justify;
+    opacity: 80%;
+
+}
+.detail-descripcion{
+    width: 400px;
+    height: auto;
+    margin: 10px 10px;
+    display:flex;
+    position: absolute;
+    right: 300px;
+    top: 300px;
+    color: #fff;
+    border: 1px solid #000;
+}
+.detail-iconos{
+    width: 200px;
+    height: 60px;
     border: 2px solid #000;
-    display:block;
-    color: #000;
     font-size: 30px;
     opacity: 1;
-
+    display: flex;
+    align-items:end;
+    position: absolute;
+    right: 50px;
+    top: 520px;
 }
 .fa-bookmark{
     color:#e6dcdc;
-    margin: 5px;
 }
 .fa-heart{
     color: #fff;
     font-size: 30px;
-    margin: 5px;
-    border-radius: 50%;
 }
 .fa-comment{
     color: #fff;
     font-size: 30px;
-    margin: 5px;
 }
-
 .fa-check{
     color: #fff;
     font-size: 30px;
-    margin: 5px;
 }
 .fa-book{
     color: #fff;
 }
 
-.content{
+.detail-contenedor-comentarios{
     width: 100%;
     height: 500px;
     margin-top: 30px;
@@ -132,52 +144,30 @@ body{
     text-align: center;
 
 }
-.content-coment{
-    width: 1200px;
-    height: auto;
-    margin-bottom: 15px;
-    padding: 10px 20px;
-    border: 1px solid #5F0609;
-    
-}
-.comentarios{
+.detail-opiniones{
     width: 900px;
     height: 150px;
     text-align: justify;
 }
-
 h1{
     font-size: 30px;
 }
-.centrado {
+.detail-contenedor-libros{
     margin: 0 auto;
-    padding: 0 .8em;
+    padding: .8em;
+    position: relative;
 
 }
-
-@media screen and (max-width:800px){
-    .centrado{
-        flex: 50%;
-    }
-
-}
-
-@media screen and (max-width:600px){
-    .centrado{
-        flex: 100%;
-    }
-
-}
-.nombre-sitio {
-    margin: 0 auto;
-    padding: 1em 0;
-    text-align: center;
-    font-weight: 300;
+.detail-titulo3{
+    display: flex;
+    position: absolute;
+    left: 10px;
+    font-size: 12px;
     color: #000;
 
 }
 figure{
-    margin: 20px;
+    margin: 30px;
     padding: 0 auto;
 }
 .imag {
@@ -190,27 +180,22 @@ figure{
     scale: 1.1;
     box-shadow: 0 0 10px #5F0609;
 }
-.libros{
+.detail-libros{
     margin-bottom: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     text-align: center;
 }
-.libro{
+.detail-libro{
     margin-bottom: 2em;
     width: 20%;
 }
-.libro-content {
-    padding: 0;
-}
+
 .libro-content h2 {
     margin-top: 0;
     margin-bottom: .5em;
     font-weight: normal;
-}
-.libro-content p {
-    font-size: 90%;
 }
 button{
     font-size: 1em;
