--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body{
 }
 .detail-contenedor-header{
     height: 60px;
-    background-color: #bdd3b6;
+    background-color: #c2c995;
     padding: 0;
 }
 
@@ -33,7 +33,7 @@ body{
     display: flex;
     position: relative;
     border-top: 1px solid #5F0609;
-    background-image:linear-gradient(rgba(5, 7, 12, .7),rgba(5, 7, 12, .7), rgba(7, 7, 12, .7)), url(../imges/books-5433432_1280.jpg);
+    background-image:linear-gradient(rgba(5, 7, 12, .6),rgba(5, 7, 12, .6), rgba(7, 7, 12, .6)), url(../img/biblioteca1.jpg);
     background-position: center center;
     background-repeat: none;
     background-size: cover;
@@ -47,9 +47,9 @@ body{
 
 #detail-titulo1{
     position: absolute;
-    left: 600px;
+    left: 620px;
     top: 60px;
-    font-size: 50px;
+    font-size: 40px;
     color: #fff;
     text-align: center;
     padding: .2em;
@@ -64,7 +64,7 @@ body{
     filter:drop-shadow(0px 7px 21px #5f0609);
     border: 1px solid #5F0609;
     position: absolute;
-    left: 170px;
+    left: 180px;
     top: 30px;
 }
 
@@ -74,22 +74,62 @@ body{
 
 }
 .detail-atributos{
-    width: 250px;
-    border: 1px solid #000;
+    width: 600px;
+    padding: 0;
+    margin: 0;
     font-size: 12px;
     display:flex;
-    flex-direction:column-reverse;
-    color: #fff;
     position: absolute;
-    right: 400px;
-    top:170px;
-    opacity: 60%;
+    top: 170px;
+    right: 95px;
+    color: #fff;
+    opacity: 90%;
 }
+.atributo1{
+    width: 150px;
+    height: auto;
+    font-size: 10px;
+    text-align: center;
+    display: flex;
+    position: absolute;
+    right: 250px;
+    top: 60px;
+    
+}
+.atributo2{
+    width: 150px;
+    height: auto;
+    font-size: 10px;
+    text-align: center;
+    display: flex;
+    position: absolute;
+    top:60px;
+    right: 450px;
+} 
+.atributo3{
+    width: 150px;
+    height: auto;
+    font-size: 10px;
+    text-align: center;
+    display: flex;
+    position: absolute;
+    top:0;
+    right: 250px;
+}
+.atributo4{
+    width: 150px;
+    height: auto;
+    font-size: 10px;
+    text-align: center;
+    display: flex;
+    position: absolute;
+    top:0;
+}
+
 .detail-descripcion p{
     font-size: 18px;
     text-align:justify;
-    opacity: 80%;
-
+    opacity:80%;
 }
 .detail-descripcion{
     width: 400px;
@@ -97,15 +137,13 @@ body{
     margin: 10px 10px;
     display:flex;
     position: absolute;
-    right: 300px;
+    right: 250px;
     top: 300px;
     color: #fff;
-    border: 1px solid #000;
 }
 .detail-iconos{
     width: 200px;
     height: 60px;
-    border: 2px solid #000;
     font-size: 30px;
     opacity: 1;
     display: flex;
@@ -114,82 +152,105 @@ body{
     right: 50px;
     top: 520px;
 }
-.fa-bookmark{
-    color:#e6dcdc;
-}
-.fa-heart{
-    color: #fff;
-    font-size: 30px;
-}
-.fa-comment{
-    color: #fff;
-    font-size: 30px;
-}
-.fa-check{
-    color: #fff;
-    font-size: 30px;
-}
-.fa-book{
-    color: #fff;
-}
 
 .detail-contenedor-comentarios{
-    width: 100%;
-    height: 500px;
+    width: 60%;
+    height: 600px;
     margin-top: 30px;
-    padding: 0 1em;
-    border-bottom: 1px solid #5F0609;
+    margin-bottom: 40px;
+    border: 1px solid #5F0609;
+    background-color: #c2c995;
     display:flex;
-    /* flex-wrap: wap; */
-    text-align: center;
+    position: relative;
+    right: 250px;
+    text-align:justify;
+    opacity: 90%;
+}
 
-}
 .detail-opiniones{
-    width: 900px;
-    height: 150px;
-    text-align: justify;
+    width: 90%;
+    height:auto;
 }
-h1{
-    font-size: 30px;
+.detail-contenedor-comentarios .detail-opiniones h2{
+    opacity: 90%;
+    margin-top: 15px;
+  
 }
+.detail-lateral{
+    width: 38%;
+    border: 1px solid #5f0609;
+    background-color: #c2c995 ;
+    text-align: center;
+    min-height: 500px;
+    max-height: 600px;
+    overflow:auto;
+    display: block;
+    position: relative;
+    top:630px;
+    left: 200px;
+}
+.detail-titulo-lateral{
+    text-align: start;
+    opacity: 80%;
+}
+.imagen2{
+    width: 130px;
+    display: block; 
+    border-radius: 15px;
+}
+
+.detail-otros-libros-autor{
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+}
+
 .detail-contenedor-libros{
     margin: 0 auto;
     padding: .8em;
+    background-image:linear-gradient(rgba(5, 7, 12, .6),rgba(5, 7, 12, .6), rgba(7, 7, 12, .6)), url(../img/biblioteca2.jpg);
     position: relative;
-
+    background-color: #c2c995;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    opacity: 90%;
 }
 .detail-titulo3{
+    width: 650px;
+    height: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
     display: flex;
-    position: absolute;
-    left: 10px;
-    font-size: 12px;
-    color: #000;
-
+    text-align:center;
+    font-size: 25px;
+    color: #fff;
 }
 figure{
     margin: 30px;
     padding: 0 auto;
 }
-.imag {
+.imagen3{
     display: block;
-    width: 100%;
+    width: 90%;
     height: auto;
     border-radius: 15px;
 }
-.imag:hover{
+.imagen3:hover{
     scale: 1.1;
     box-shadow: 0 0 10px #5F0609;
 }
 .detail-libros{
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     text-align: center;
 }
 .detail-libro{
-    margin-bottom: 2em;
-    width: 20%;
+    margin-bottom: 1em;
+    margin-top: 1em;
+    width: 25%;
 }
 
 .libro-content h2 {
@@ -197,7 +258,20 @@ figure{
     margin-bottom: .5em;
     font-weight: normal;
 }
-button{
+.button1{
+    font-size: .8em;
+    font-weight: bold;
+    padding: 5px 5px;
+    border-radius: 5px;
+    border: 2px solid rgb(0,0,0,0.3);
+    box-shadow: 2px 2px 10px rgb(0,0,0,0.5);
+    color:#000;
+    background-color: #bdd3b6;
+}
+.button1:hover{
+    background-color: #ad2003;
+}
+.button2{
     font-size: 1em;
     font-weight: bold;
     padding: 5px 15px;
@@ -207,7 +281,7 @@ button{
     color:#000;
     background-color: #bdd3b6;
 }
-button:hover{
+.button2:hover{
     background-color: #ad2003;
 }
 .navbar {
