--- a/css/style.css
+++ b/css/style.css
@@ -7,28 +7,16 @@
     font-family: "Reem Kufi Fun", sans-serif;
     text-decoration: none;
 }
-body{
-    background-color: #e0e6ae;
-    color: #000;
-    width: 100%;
-}
-@media screen and (max-width:800px){
-    .detail-contenedor-libros{
-        flex: 50%;
-    }
-}
-@media screen and (max-width:600px){
-    .detail-contenedor-libros{
-        flex: 100%;
-    }
-}
+
 .detail-contenedor-header{
     height: 60px;
     background-color: #c2c995;
     padding: 0;
+    display: flex;
 }
 
 .detail-contenedor-comienzo{
+    width: 100%;
     height: 600px;
     display: flex;
     position: relative;
@@ -37,22 +25,21 @@ body{
     background-position: center center;
     background-repeat: none;
     background-size: cover;
-    min-height: 7ovh;
-    align-items:center;
-    justify-content: center;
+   
 }
+
 .detail-img-atribu-descripcion{
     display: flex;
 }
 
 #detail-titulo1{
+    padding: .2em;
+    font-size: 40px;
+    color: #fff;
+    display: flex;
     position: absolute;
     left: 620px;
     top: 60px;
-    font-size: 40px;
-    color: #fff;
-    text-align: center;
-    padding: .2em;
 }
 
 .imagen-principal{
@@ -60,9 +47,9 @@ body{
     height: 500px;
     border-radius: 15px;
     display:flex;
+    border: 1px solid #5F0609;
     cursor: pointer;
     filter:drop-shadow(0px 7px 21px #5f0609);
-    border: 1px solid #5F0609;
     position: absolute;
     left: 180px;
     top: 30px;
@@ -71,66 +58,63 @@ body{
 .imagen-principal:hover{
     scale: 1.1;
     box-shadow: 0 0 15px #5F0609;
+}
 
-}
-.detail-atributos{
-    width: 600px;
-    padding: 0;
-    margin: 0;
-    font-size: 12px;
-    display:flex;
-    position: absolute;
-    top: 170px;
-    right: 95px;
-    color: #fff;
-    opacity: 90%;
-}
 .atributo1{
     width: 150px;
     height: auto;
+    color: #fff;
     font-size: 10px;
     text-align: center;
     display: flex;
     position: absolute;
-    right: 250px;
-    top: 60px;
-    
+    right: 320px;
+    top: 220px;
 }
+
 .atributo2{
     width: 150px;
     height: auto;
+    color: #fff;
     font-size: 10px;
     text-align: center;
     display: flex;
     position: absolute;
-    top:60px;
-    right: 450px;
-} 
+    top:220px;
+    right: 500px;
+}
+
 .atributo3{
     width: 150px;
     height: auto;
+    color: #fff;
     font-size: 10px;
     text-align: center;
     display: flex;
     position: absolute;
-    top:0;
-    right: 250px;
+    top:150px;
+    right: 320px;
 }
+
 .atributo4{
     width: 150px;
     height: auto;
+    color: #fff;
     font-size: 10px;
     text-align: center;
     display: flex;
     position: absolute;
-    top:0;
+    top:150px;
+
 }
 
 .detail-descripcion p{
+    display: flex;
     font-size: 18px;
     text-align:justify;
     opacity:80%;
 }
+
 .detail-descripcion{
     width: 400px;
     height: auto;
@@ -141,11 +125,11 @@ body{
     top: 300px;
     color: #fff;
 }
+
 .detail-iconos{
     width: 200px;
     height: 60px;
     font-size: 30px;
-    opacity: 1;
     display: flex;
     align-items:end;
     position: absolute;
@@ -154,123 +138,133 @@ body{
 }
 
 .detail-contenedor-comentarios{
-    width: 60%;
-    height: 600px;
-    margin-top: 30px;
-    margin-bottom: 40px;
+    width: 100%;
+    height: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
     border: 1px solid #5F0609;
     background-color: #c2c995;
     display:flex;
+    flex-wrap: wrap;
+    min-width: 300px;
     position: relative;
-    right: 250px;
     text-align:justify;
-    opacity: 90%;
+   
 }
 
 .detail-opiniones{
     width: 90%;
     height:auto;
-}
-.detail-contenedor-comentarios .detail-opiniones h2{
-    opacity: 90%;
-    margin-top: 15px;
-  
-}
-.detail-lateral{
-    width: 38%;
-    border: 1px solid #5f0609;
-    background-color: #c2c995 ;
-    text-align: center;
-    min-height: 500px;
-    max-height: 600px;
-    overflow:auto;
-    display: block;
-    position: relative;
-    top:630px;
-    left: 200px;
-}
-.detail-titulo-lateral{
-    text-align: start;
-    opacity: 80%;
-}
-.imagen2{
-    width: 130px;
-    display: block; 
-    border-radius: 15px;
+    margin-bottom: 40px;
 }
 
+.detail-contenedor-comentarios .detail-opiniones h2{
+    margin-top: 25px;
+    font-size: 25px;
+    text-align: center;
+}
+
+.detail-otros{
+    width: 100%;
+    margin-top: 10px;
+    border: 1px solid #5f0609;
+    background-color: #c2c995 ;
+    display: block;
+    text-align: center;
+    align-content: space-around;
+
+}
+.detail-otros h2{
+    font-size: 30px;
+    margin-top: 15px;
+    opacity: 90%;
+}
 .detail-otros-libros-autor{
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
+    min-width: 300px;
     text-align: center;
+}
+
+.imagen2{
+    width: 160px;
+    margin-bottom: 10px;
+    display: flex;
+    border-radius: 15px;
+}
+.imagen2:hover{
+    scale: 1.1;
+    box-shadow: 0 0 10px #5F0609;
 }
 
 .detail-contenedor-libros{
     margin: 0 auto;
     padding: .8em;
     background-image:linear-gradient(rgba(5, 7, 12, .6),rgba(5, 7, 12, .6), rgba(7, 7, 12, .6)), url(../img/biblioteca2.jpg);
-    position: relative;
+    display: block;
+    text-align: center;
     background-color: #c2c995;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    opacity: 90%;
 }
-.detail-titulo3{
-    width: 650px;
-    height: auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    display: flex;
-    text-align:center;
-    font-size: 25px;
-    color: #fff;
+.detail-contenedor-libros h2{
+    font-size: 30px;
+    color: #000;
 }
+
 figure{
-    margin: 30px;
+    margin: 20px;
     padding: 0 auto;
 }
+
 .imagen3{
-    display: block;
-    width: 90%;
+    display: flex;
+    width: 70%;
     height: auto;
     border-radius: 15px;
 }
+
 .imagen3:hover{
     scale: 1.1;
     box-shadow: 0 0 10px #5F0609;
 }
+
 .detail-libros{
     margin-bottom: 10px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content:space-around;
     text-align: center;
+    align-content: space-around;
 }
 .detail-libro{
+    display: flex;
+    flex-wrap: wrap;
     margin-bottom: 1em;
     margin-top: 1em;
     width: 25%;
+    min-width: 300px;
 }
 
-.libro-content h2 {
-    margin-top: 0;
-    margin-bottom: .5em;
-    font-weight: normal;
-}
 .button1{
-    font-size: .8em;
+    font-size: 1em;
     font-weight: bold;
     padding: 5px 5px;
+    margin-bottom: 10px;
     border-radius: 5px;
     border: 2px solid rgb(0,0,0,0.3);
     box-shadow: 2px 2px 10px rgb(0,0,0,0.5);
     color:#000;
     background-color: #bdd3b6;
+
 }
+
 .button1:hover{
     background-color: #ad2003;
 }
+
 .button2{
     font-size: 1em;
     font-weight: bold;
@@ -284,6 +278,7 @@ figure{
 .button2:hover{
     background-color: #ad2003;
 }
+
 .navbar {
     position: sticky;
     left: 0;
@@ -293,6 +288,7 @@ figure{
     margin-right: auto;
     background-color: #5F0609;
 }
+
 .navbar ul{
     display: flex;
     flex-wrap: wrap;
@@ -301,6 +297,7 @@ figure{
     padding: 1.2em;
     gap: .5em;
 }
+
 .navbar li a{
     flex: 1 0 auto;
     text-align: center;
@@ -310,3 +307,7 @@ figure{
     padding: .5em;
     color: white;
 }
+
+/*A partir de acá empiezo el responsive*/
+
+
