--- a/css/style.css
+++ b/css/style.css
@@ -17,42 +17,39 @@
 
 .detail-contenedor-comienzo{
     width: 100%;
-    height: 600px;
-    display: flex;
-    position: relative;
-    border-top: 1px solid #5F0609;
+    height: 500px;
     background-image:linear-gradient(rgba(5, 7, 12, .6),rgba(5, 7, 12, .6), rgba(7, 7, 12, .6)), url(../img/biblioteca1.jpg);
     background-position: center center;
     background-repeat: none;
     background-size: cover;
+    position: relative;
+    display: block;
    
 }
 
-.detail-img-atribu-descripcion{
-    display: flex;
-}
-
 #detail-titulo1{
-    padding: .2em;
-    font-size: 40px;
+    width: 460px;
+    height: 70px;
+    font-size: 35px;
+    justify-content: center;
     color: #fff;
-    display: flex;
+    border: 1px solid #fff;
     position: absolute;
-    left: 620px;
-    top: 60px;
+    right:260px;
+    top: 10px;
 }
 
 .imagen-principal{
     width: 400px;
     height: 500px;
     border-radius: 15px;
-    display:flex;
     border: 1px solid #5F0609;
     cursor: pointer;
     filter:drop-shadow(0px 7px 21px #5f0609);
     position: absolute;
-    left: 180px;
-    top: 30px;
+    left: 130px;
+    top:0px;
+
 }
 
 .imagen-principal:hover{
@@ -62,54 +59,22 @@
 
 .atributo1{
     width: 150px;
-    height: auto;
+    height: 60px;
     color: #fff;
     font-size: 10px;
     text-align: center;
-    display: flex;
-    position: absolute;
-    right: 320px;
-    top: 220px;
+    border: 1px solid #fff;
 }
 
-.atributo2{
-    width: 150px;
-    height: auto;
-    color: #fff;
-    font-size: 10px;
-    text-align: center;
+.atributos{
     display: flex;
     position: absolute;
-    top:220px;
-    right: 500px;
-}
-
-.atributo3{
-    width: 150px;
-    height: auto;
-    color: #fff;
-    font-size: 10px;
-    text-align: center;
-    display: flex;
-    position: absolute;
-    top:150px;
-    right: 320px;
-}
-
-.atributo4{
-    width: 150px;
-    height: auto;
-    color: #fff;
-    font-size: 10px;
-    text-align: center;
-    display: flex;
-    position: absolute;
-    top:150px;
-
+    right: 150px;
+    top: 120px;
+    flex-direction: row;
 }
 
 .detail-descripcion p{
-    display: flex;
     font-size: 18px;
     text-align:justify;
     opacity:80%;
@@ -117,24 +82,25 @@
 
 .detail-descripcion{
     width: 400px;
-    height: auto;
-    margin: 10px 10px;
-    display:flex;
-    position: absolute;
-    right: 250px;
-    top: 300px;
+    height: 180px;
     color: #fff;
+    border: 1px solid #fff;
+    position: absolute;
+    top:230px;
+    right: 300px;
+
 }
 
 .detail-iconos{
     width: 200px;
     height: 60px;
     font-size: 30px;
-    display: flex;
     align-items:end;
-    position: absolute;
-    right: 50px;
-    top: 520px;
+    display: flex;
+    border: 1px solid #fff;
+    position:absolute;
+    bottom: 5px;
+    right: 30px;
 }
 
 .detail-contenedor-comentarios{
@@ -144,10 +110,6 @@
     margin-bottom: 10px;
     border: 1px solid #5F0609;
     background-color: #c2c995;
-    display:flex;
-    flex-wrap: wrap;
-    min-width: 300px;
-    position: relative;
     text-align:justify;
    
 }
@@ -280,7 +242,7 @@ figure{
 }
 
 .navbar {
-    position: sticky;
+    position: fixed;
     left: 0;
     right: 0;
     bottom: 0;
@@ -310,4 +272,15 @@ figure{
 
 /*A partir de acá empiezo el responsive*/
 
+
+@media screen and (min-width:300px) {
+    .detail-contenedor-comienzo{
+        margin: 0 auto;
+        padding: 0 .8em;
+        display:flex;
+        flex-wrap: wrap;
+        min-width: 300px;
+    }
+   
+}
 
