--- a/css/style-form1.css
+++ b/css/style-form1.css
@@ -5,12 +5,12 @@
   }
   
   body {
-    background-color: #745e4b;
+    background-color:#745e4b;
   }
   
   .formulario {
     width: 400px;
-    background-image: url(../img/biblioteca3.jpg);
+    background-image:linear-gradient(rgba(5, 7, 12, .6),rgba(5, 7, 12, .6), rgba(7, 7, 12, .6)), url(../img/biblioteca3.jpg);
     padding: 30px;
     margin: auto;
     margin-top: 100px;
@@ -23,6 +23,7 @@
   .formulario h4 {
     font-size: 22px;
     margin-bottom: 20px;
+    text-align: center;
   }
   
   .controles {
