--- a/css/style-form1.css
+++ b/css/style-form1.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Reem+Kufi+Fun:wght@400..700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -6,17 +8,19 @@
   
   body {
     background-color:#c2c995;
+    font-family: "Reem Kufi Fun", sans-serif;
+    border-radius: 20px;
+
   }
   
   .formulario {
     width: 400px;
-    background-image:linear-gradient(rgba(5, 7, 12, .6),rgba(5, 7, 12, .6), rgba(7, 7, 12, .6)), url(../img/biblioteca3.jpg);
+    background-image:linear-gradient(rgba(5, 7, 12, .4),rgba(5, 7, 12, .4), rgba(7, 7, 12, .4)), url(../img/biblioteca3.jpg);
     padding: 30px;
     margin: auto;
     margin-top: 100px;
     border-radius: 4px;
-    font-family: 'calibri';
-    color: white;
+    color: #fff;
     box-shadow: 7px 13px 37px #000;
   }
   
@@ -31,22 +35,19 @@
     background: #5f0609;
     padding: 10px;
     border-radius: 4px;
-    margin-bottom: 16px;
+    margin-bottom: 18px;
     border: 1px solid #ad2003;
-    font-family: 'calibri';
+    font-family: "Reem Kufi Fun", sans-serif;
     font-size: 18px;
-    color: white;
+    color: #fff;
   }
-  
-  .formulario p {
-    height: 40px;
-    text-align: center;
-    font-size: 18px;
-    line-height: 40px;
+
+  label{
+    border-radius: 25px;
+    font-weight: 400;
   }
-  
   .formulario a {
-    color: white;
+    color: #fff;
     text-decoration: none;
   }
   
