--- a/css/style.css
+++ b/css/style.css
@@ -8,54 +8,54 @@
     text-decoration: none;
 }
 
-.detail-contenedor-header{
-    height: 60px;
-    background-color: #c2c995;
-    padding: 0;
-    display: flex;
-}
-
 .detail-contenedor-comienzo{
     width: 100%;
-    height: 500px;
+    display: flex;
+}
+.container{
     background-image:linear-gradient(rgba(5, 7, 12, .6),rgba(5, 7, 12, .6), rgba(7, 7, 12, .6)), url(../img/biblioteca1.jpg);
     background-position: center center;
     background-repeat: none;
     background-size: cover;
-    position: relative;
-    display: block;
+    text-align: center;
+    padding: 30px 10px;
+}
+
+.Titulo1{
+    display: flex;
+    justify-content: center;
+    font-size: 35px;
+    color: #fff;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+.img-container{
+    display: flex;
+    width: 400px;
+    height: 400px;
+}
+img{
+    border-radius: 20px;
+    width: 300px;
+    height: 400px;
+}
+img:hover{
+    scale: 1.2;
+}
+.texto-principal{
+    width: 400px;
+    display: flex;
+    color: #fff;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    font-size: 18px;
+}
+
+.atributos{
+    display: flex;
+    flex-direction: row;
    
 }
-
-#detail-titulo1{
-    width: 460px;
-    height: 70px;
-    font-size: 35px;
-    justify-content: center;
-    color: #fff;
-    position: absolute;
-    right:260px;
-    top: 10px;
-}
-
-.imagen-principal{
-    width: 400px;
-    height: 500px;
-    border-radius: 15px;
-    border: 1px solid #5F0609;
-    cursor: pointer;
-    filter:drop-shadow(0px 7px 21px #5f0609);
-    position: absolute;
-    left: 130px;
-    top:0px;
-
-}
-
-.imagen-principal:hover{
-    scale: 1.1;
-    box-shadow: 0 0 15px #5F0609;
-}
-
 .atributo1{
     width: 150px;
     height: 60px;
@@ -63,39 +63,16 @@
     font-size: 10px;
     text-align: center;
     border: 1px solid #fff;
+    margin-top: 20px;
 }
-
-.atributos{
-    display: flex;
-    position: absolute;
-    right: 150px;
-    top: 120px;
-    flex-direction: row;
-}
-
-
-.detail-descripcion{
-    width: 400px;
-    height: 150px;
-    color: #fff;
-    position: absolute;
-    top:230px;
-    right: 300px;
-    opacity: 80%;
-    font-size: 17px;
-    text-align: justify;
-
-}
-
 .detail-iconos{
     width: 200px;
     height: 60px;
     font-size: 30px;
     align-items:end;
     display: flex;
-    position:absolute;
-    bottom: 5px;
-    right: 30px;
+    margin-top: 30px;
+    margin-bottom: 10px;
 }
 
 .detail-contenedor-comentarios{
@@ -116,7 +93,7 @@
 }
 
 .detail-contenedor-comentarios .detail-opiniones h2{
-    margin-top: 25px;
+    margin-top: 20px;
     font-size: 25px;
     text-align: center;
 }
@@ -145,7 +122,8 @@
 }
 
 .imagen2{
-    width: 160px;
+    width: 190px;
+    height: 250px;
     margin-bottom: 10px;
     display: flex;
     border-radius: 15px;
@@ -236,31 +214,3 @@ figure{
     background-color: #ad2003;
 }
 
-.navbar {
-    position: sticky;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #5F0609;
-}
-
-.navbar ul{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    list-style-type: none;
-    padding: 1.2em;
-    gap: .5em;
-}
-
-.navbar li a{
-    flex: 1 0 auto;
-    text-align: center;
-    border-right: solid 1px white;
-    border-left: solid 1px white;
-    text-decoration: none;
-    padding: .5em;
-    color: white;
-}
