--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,8 @@
     text-decoration: none;
 }
 
-.detail-contenedor-comienzo{
-    width: 100%;
-    display: flex;
-}
 .detail-container{
+    height: auto;
     background-image:linear-gradient(rgba(5, 7, 12, .6),rgba(5, 7, 12, .6), rgba(7, 7, 12, .6)), url(../img/biblioteca1.jpg);
     background-position: center center;
     background-repeat: none;
