--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   font-family: "Reem Kufi Fun", sans-serif;
   text-decoration: none;
+  list-style: none;
 }
 
 body {
@@ -21,6 +22,12 @@ header {
   padding: 0 1em;
   align-items: center;
   justify-content: space-between;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  list-style: none;
 }
 
 ::placeholder {
@@ -42,6 +49,7 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
 .title-home {
@@ -269,13 +277,12 @@ header {
   gap: 1em;
 }
 
-#btn-registro{
+#btn-registro {
   background-color: #5f0609;
   color: white;
-  padding: .5em;
+  padding: 0.5em;
   font-size: 1.3em;
 }
-
 
 /*  */
 
@@ -312,12 +319,6 @@ header {
 
 .boton:hover {
   background: #5f0609;
-}
-
-.detail-img-container {
-  display: flex;
-  width: 400px;
-  height: 400px;
 }
 
 .detail-img-container img {
@@ -531,7 +532,7 @@ figure {
 
 #resenia-h3 {
   text-align: center;
-  margin-bottom: 1em;
+  margin: 1em;
 }
 
 .resenia-contenedor {
@@ -539,6 +540,7 @@ figure {
   gap: 2em;
   align-items: center;
   justify-content: space-around;
+  padding: 1em;
 }
 
 .resenia-contenedor-reseñas {
@@ -550,7 +552,7 @@ figure {
 }
 
 .resenia-contenedor img {
-  max-width: 30%;
+  width: 40%;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 
@@ -581,7 +583,7 @@ figure {
 
 #resenia-button-submit {
   display: block;
-  background-color: #4caf50;
+  background-color: #5f0609;
   color: white;
   padding: 1em;
   border: none;
@@ -612,17 +614,18 @@ figure {
 
 /* About Page */
 
-.about-img {
+.about-img img {
+  width: 75%;
   display: flex;
-  justify-content: center;
-  font-size: 35px;
-  color: #fff;
-  margin-top: 20px;
-  margin-bottom: 30px;
+  margin: 1em auto;
 }
 
 .about-contenedor {
-  padding: 2em 1em;
+  margin:1em ;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 /*  */
@@ -633,12 +636,9 @@ figure {
   left: 0;
   right: 0;
   bottom: 0;
-  margin-left: auto;
-  margin-right: auto;
   background-color: #5f0609;
   box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.5);
 }
-
 .navbar ul {
   display: flex;
   flex-wrap: wrap;
@@ -652,7 +652,6 @@ figure {
   text-align: center;
   border-right: solid 1px white;
   border-left: solid 1px white;
-  text-decoration: none;
   padding: 0.5em;
   color: white;
 }
@@ -720,34 +719,39 @@ figure {
 /* Login */
 
 .form-login {
-  width: 300px;
+  width: 75%;
   margin: 1em auto;
   padding: 2em;
   background-color: #5f0609;
   border-radius: 20px;
   color: white;
   text-align: center;
+  display: flex;
+  flex-direction: column;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 
-.form-login input[type="text"],
-.form-login input[type="password"] {
-  width: 100%;
-  padding: 10px;
-  margin: 10px 0;
-  box-sizing: border-box;
+#error-msg {
+  color: white;
+  display: none;
 }
-.form-login input[type="submit"] {
+
+.form-login input {
+  margin: 1em auto;
+  width: 75%;
+}
+
+.form-login #btn-login {
   width: 50%;
   padding: 10px;
   background-color: #e0e6ae;
   color: black;
   border: none;
   cursor: pointer;
-  margin: 1em;
+  margin: 1em auto;
 }
-.form-login input[type="submit"]:hover {
-  background-color: #0056b3;
+.form-login #btn-login:hover {
+  background-color: #d6db89;
 }
 
 /*  */
@@ -763,6 +767,8 @@ figure {
 .card {
   background: #5f0609;
   margin: 1em auto;
+  display: flex;
+  flex-direction: column;
   border-radius: 10px;
   font-size: 0.8em;
   color: white;
@@ -788,6 +794,10 @@ figure {
   margin: 2em 1em;
 }
 
+.soporte {
+  text-align: center;
+}
+
 .info-personal h3,
 .soporte h3 {
   text-align: center;
@@ -795,9 +805,16 @@ figure {
 }
 
 .info-personal .detalle p {
-  margin-bottom: 0.5em;
+  margin: 0.5em;
 }
 
+.info-personal .detalle span {
+  margin: 0.5em;
+}
+
+.profile-recientes h2 {
+  text-align: center;
+}
 /*  */
 
 /* Footer */
@@ -910,16 +927,13 @@ figure {
 
   .about-contenedor {
     display: flex;
-  }
-
-  .about-img img {
-    width: 75%;
+    flex-direction: row;
+    margin-bottom: 5%;
   }
 
   .about-text {
     margin: auto;
     padding: 1em;
-    border-radius: 4px;
   }
 
   /*  */
@@ -1000,6 +1014,11 @@ figure {
   .detail-container-tres {
     width: 75%;
     margin: auto;
+  }
+
+  .detail-img-container {
+    display: flex;
+    width: 35%;
   }
 
   .detail-container-tres > * {
