Se agrego comentario

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
   font-family: "Reem Kufi Fun", sans-serif;
   text-decoration: none;
 }
-
+/* body prueba*/
 body {
   background-color: #e0e6ae;
   height: 100vh;
